PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Fix: On Linux and Windows the ~<insert>~ key is now mapped to yank, as
  it's already done for macOS.
- Fix: Several EDTS commands were not autoloaded by EDTS code.  PEL code now
  autoloads them when EDTS is requested.  This includes the EDTS debug, eunit
  and dialyzer commands.
- Fix: *pel-require* can now install and load at run time, not only load-time,
  allowing to write code that use external packages to install them only when
  required.  There is still one issue left: the package installed this way
  will be removed by *pel-cleanup*: will need to add a mechanism to take this
  type of installation into account.
- New: key binding ~<f6> 6~ to *complete-symbol* and ~<f6> 7~ to
  *info-complete-symbol* to provide more flexible access to the completion
  commands with bindings available in all environments.  These position of the
  keys in the sequences should make them easy to type.
- New: key binding: ~<f6><f6>~ is now bound to *pel-jump-to-mark*.  This
  helps on many Linux systems where the ~M-`~ key is used by the desktop to
  switch from similar windows.
- Modified: key bindings to toggle EDTS: it was bound to ~<f12> M-E~ (or its
  equivalent ~<M-f12> M-E~).  It is now bound to ~<f12> M-E M-E~ (and its
  equivalent and easier to type ~<M-f12> M-E M-E~).
- Modified: key bindings for other EDTS commands, which are now in the
  ~<f12> M-E~ key prefix: *edts-buffer-node-name*, *edts-api-start-server*,
  *edts-shell*.
- Improved: key binding for the *pel-copy-marked-or-whole-line* by adding the
  ~<f11> = =~ key, which is easier to type than the other ~<f11>~ keys
  sequences.  It's best to use ~<kp-separator>~ but this is unfortunately not
  available under some Linux environments.